counter: i made a change so the counter wooldnt go beyond 1 and i also made a change to the review and change it to my Profile instead

--- a/review.css
+++ b/review.css
@@ -216,14 +216,14 @@ main {
   place-items: center;
   border-radius: 50%;
   transform: translateY(25%);
-  background: var(--clr-primary-5);
+  background: var(--clr-primary-1);
   color: var(--clr-white);
 }
 .img-container::before {
-  content: "";
+  content: "" "";
   width: 100%;
   height: 100%;
-  background: var(--clr-primary-5);
+  background: var(--clr-primary-3);
   position: absolute;
   top: -0.25rem;
   right: -0.5rem;
